# 42_Cursus

./: Makefile  ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_memcmp.c  ft_memmove.c  ft_memset.c  ft_strlcat.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_substr.c  ft_toupper.c  libft.h
FdF/: CMakeLists.txt  Makefile  algorithm.c  algorithm_ex.c  ampoule.xpm  essai.c  essai.h  fdf.h  free.c  graphical_part.c  leaf-1.xpm  len.c  main.c  mathmart.c  parsing.c  split.c  utils.c  utils_split.c
FdF/GNL/: get_next_line.c  get_next_line.h  get_next_line_utils.c
FdF_2/: CMakeLists.txt  Makefile  algorithm.c  bonus.c  drawing_part.c  fdf.h  free.c  graphical_part.c  main.c  parsing.c  split.c  utils.c
FdF_2/GNL/: get_next_line.c
FdF_2/fdf.dSYM/Contents/Resources/DWARF/: fdf
FdF_2/maps/: long_x.fdf  long_y.fdf
Minitalk/: Makefile  client.c  client_bonus.c  minitalk.h  minitalk_bonus.h  minitalk_utils.c  minitalk_utils_bonus.c  server.c  server_bonus.c  test.c  test2.c
Minitalk/ft_printf/: ft_printf.h  ft_printf_utils_1.c
Philosophers/: CMakeLists.txt  Makefile  actions.c  error_msg.c  execution.c  main.c  messages.c  parsing.c  parsing2.c  philo.h  thread_man_exemple.c  time.c  utils.c
get_next_line/: a.out  get_next_line.c  get_next_line.h  get_next_line_utils.c  main_dorian.c  main_test.c  test.txt
get_next_line_2/: a.out  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main_test.c  poeme_1.txt  poeme_2.txt  poeme_3.txt  test.txt
get_next_line_2/a.out.dSYM/Contents/Resources/DWARF/: a.out
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
libft/libft-unit-test/: Makefile
libft/libft-unit-test/assets/tmp/: __.SYMDEF SORTED  libft.h
libft/libftTester/a.out.dSYM/Contents/Resources/DWARF/: a.out
printf/: Makefile  a.out  ft_printf.c  ft_printf.h  ft_printf_utils_1.c  ft_printf_utils_2.c  main_test.c
printf/libft/: Makefile  ft_putchar.c  ft_putnbr.c  ft_putnbr_base.c  ft_putptr.c  ft_putstr.c  libft.h
push_swap/: Makefile  algorithm.c  main.c  main_test_operations.c  operations.c  parsing.c  push.c  push_swap.c  push_swap.h  reverse_rotate.c  rotate.c  swap&push.c  swap.c  utils.c
push_swap_v2/: Makefile  algorithm.c  main.c  parsing.c  push_swap.h  utils.c
